...
    <string name="event_name_placeholder">Event Name</string>
    <string name="attendee">Attendee</string>
    <string name="date_and_time">Date and Time</string>
    <string name="date">Date</string>
    <string name="send_announcement_hint">Write announcement</string>
    <string name="edit_event_details">Edit event details</string>
    <string name="event_description">About the event …</string>
    <string name="event_details_title">Title</string>
    <string name="event_details">Event Details</string>
    <string name="multi_day_event">Multi-Day Event?</string>
    <string name="end_date">End Date</string>
    <string name="time_1hr">time + 1hr</string>
    <string name="start_time">Start Time</string>
...
    <string name="Contact_Number">Contact Number</string>
    <string name="log_out">Log out</string>
    <string name="manage_events">Manage Events</string>
    <string name="enter_the_conclave">Enter the Conclave</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="create_account">Create Account</string>
    <string name="skip_account_creation">Skip account creation</string>
    <string name="phone_number">Phone Number</string>
    <string name="current_attendance_menu">Current Attendance</string>
    <string name="announcements">Announcements</string>
    <string name="sign_ups">Sign Ups</string>
    <string name="geo_check_ins">Geo Check-Ins</string>
    <string name="share_qr_code">Share Promo QR code</string>
...
