<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_edittext_dark"
    tools:context="com.example.droiddesign.view.AttendeeAndOrganizer.DiscoverEventsActivity">

    <ImageView
        android:layout_width="845dp"
        android:layout_height="845dp"
        android:contentDescription="@string/biglogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_menu_bar"
        app:srcCompat="@drawable/conclave_logo_large_dark" />
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:maxHeight="700dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top_menu_bar"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.02" >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/organizer_message_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:visibility="gone"
        android:background="@color/bg_dark"
        android:textColor="@color/secondary_light"
        app:itemTextColor="@color/secondary_light"
        app:headerLayout="@layout/header_navigation_drawer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_menu_bar"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/bg_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_upcoming_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/announcements"
            android:textColor="@color/secondary_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bg_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:srcCompat="@drawable/left_chevron"
            android:contentDescription="@string/back" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <RelativeLayout
        android:id="@+id/only_owner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Other UI components of activity -->

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:background="@color/bg_dark_transparent_35"
            android:padding="16dp">

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/card_bg_light_transparent"
                android:background="@color/bg_dark_transparent_97"
                android:padding="7dp"
                android:hint="Title"/>

            <EditText
                android:id="@+id/message_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/card_bg_light_transparent"
                android:background="@color/bg_dark_transparent_97"
                android:padding="7dp"
                android:layout_marginTop="5dp"
                android:hint="Message"
                android:inputType="textMultiLine"/>

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="Send Announcement"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>