...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_event_name"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:fontFamily="@font/opensans"
            android:text=""
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>
...
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start_time"
        app:layout_constraintVertical_bias="0.244" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_next_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bg_light"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
